--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ethers": "^5.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "3.2.0"
   },
   "scripts": {
